# beatograph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  beatograph.json  do.cmd  podcasts.txt  presets.txt  vcpkg.json
.github/workflows/: cmake-win64.yml
assets/: assets.rc
assets/fonts/: Font90Icons-info.txt
chrome_extensions/beatonet/: background.js  manifest.json
imgcache/: 249918704940566352  5548621248755943587  5704486429601724353  9169169967166952162  index.txt
panels/: DNS.json  acxdigital.json.dont  alquilacuida.json  arangodb.json  arangodb.json.dont  data-offering.json  data-offering.json.dont  dev-locked.json  eleven.json.dont  my-shadow-pcs.json  my-shadow-pcs.json.dont  redis.json  rexi.json  visualblasters.json
sample/: metrics.txt
src/: beatograph.cpp  beatograph_test.cpp  factories.hpp  font_setup.hpp  group_t.hpp  imgcache.hpp  main_screen.cpp  main_screen.hpp  metric.hpp  metric_value.hpp  metric_view.cpp  metric_view.hpp  metric_view_config_screen.cpp  metric_view_config_screen.hpp  metrics_menu.cpp  metrics_menu.hpp  metrics_model.hpp  metrics_parser.cpp  metrics_parser.hpp  names.hpp  panel_loader.hpp  pch.h  registrar.hpp  screen_tabs.hpp  service_utils.hpp  split_screen.hpp  tool_screen.hpp  when_available.hpp
src/arangodb/: cluster_report.hpp
src/calendar/: host.hpp  screen.hpp
src/clocks/: host.hpp  screen.hpp  weather.hpp
src/cloud/cppgpt/: command.hpp  screen.hpp
src/cloud/deel/: data.hpp  host.hpp  screen.hpp
src/cloud/docker/: host.hpp  screen.hpp
src/cloud/docker/login/: host.hpp
src/cloud/github/: host.hpp  login_screen.hpp  repo_screen.hpp  screen.hpp
src/cloud/gtts/: host.hpp
src/cloud/mail/: imap_host.hpp  mail_screen.hpp  message.hpp
src/cloud/metrics/: metric.hpp  metric_value.hpp  metric_view.cpp  metric_view.hpp  metric_view_config.hpp  metric_view_config_screen.cpp  metric_view_config_screen.hpp  metrics_menu.cpp  metrics_menu.hpp  metrics_model.hpp  metrics_parser.cpp  metrics_parser.hpp  metrics_screen.hpp
src/cloud/twitter/: host.hpp
src/cloud/whatsapp/: autotext.hpp  classifier.hpp  host.hpp  screen.hpp
src/config/: file_config.hpp
src/conversions/: date_time.hpp  metric-imperial.hpp  screen.hpp  uri.hpp
src/cppgpt/: screen.hpp
src/data_offering/: apiclient.hpp  importer_report.hpp  screen.hpp
src/database/: arangodb.hpp  screen.hpp
src/dev-locked/: screen.hpp
src/docker/: host.hpp  screen.hpp
src/file_selection/: screen.hpp
src/git/: host.hpp  screen.hpp
src/github/: host.hpp  login_host.hpp  login_screen.hpp  repo_screen.hpp  screen.hpp
src/gtts/: host.hpp
src/host/: host.hpp  host_local.hpp  local_mapping.hpp  local_screen.hpp  screen.hpp  ssh_execute.hpp
src/hosting/: host.hpp  host_local.hpp  local_mapping.hpp  local_process.hpp  local_screen.hpp  screen.hpp  ssh_screen.hpp
src/hosting/db/: sqlite.hpp  sqlite_keyvalue.hpp
src/hosting/http/: fetch.hpp
src/hosting/login/: host.hpp  screen.hpp
src/hosting/notify/: screen.hpp
src/hosting/ssh/: screen_all.hpp
src/hosting/telnet/: ansi.hpp  host.hpp  options.hpp
src/http/: fetch.hpp
src/jira/: colors.hpp  host.hpp  issue_screen.hpp  jira_content_render.hpp  project_screen.hpp  screen.hpp  user_screen.hpp
src/media/html/: inner-sample-rss.xml  renderer.hpp
src/media/radio/: host.hpp  location.hpp  screen.hpp
src/media/rss/: feed.hpp  host.hpp  reddit.xml  screen.hpp  sqliterepo.hpp
src/metrics/: from_url.hpp  metric_view.cpp  metric_view.hpp  metrics_menu.cpp  metrics_model.hpp  metrics_parser.cpp  metrics_parser.hpp  metrics_screen.hpp
src/notify/: host.hpp  screen.hpp
src/openstreet/: host.hpp
src/panel/: config.hpp  screen.hpp
src/pm/calendar/: host.hpp  screen.hpp  uni_notice.hpp
src/pm/jira/: host.hpp  issue_screen.hpp  jira_content_render.hpp  project_screen.hpp  screen.hpp  user_screen.hpp
src/pm/overall/: host.hpp
src/pm/toggl/: toggl_client.hpp  toggl_screen.hpp
src/pm/toggl/login/: host.hpp  screen.hpp
src/radio/: host.hpp  screen.hpp
src/report/: host.hpp
src/richeditor/: view.hpp
src/rss/: feed.hpp  host.hpp  screen.hpp
src/services/: summarize.hpp
src/ssh/: screen_all.hpp
src/structural/: key_value.hpp
src/structural/config/: file_config.hpp
src/structural/panel/: config.hpp
src/structural/search/: host.hpp  screen.hpp
src/structural/text_command/: base_commands.hpp  host.hpp  screen.hpp
src/structural/views/: cached_view.hpp  json.hpp  keyval_view.hpp
src/toggl/: toggl_client.hpp  toggl_screen.hpp
src/toggl/login/: host.hpp
src/util/: imgui_markdown.hpp
src/util/clocks/: host.hpp  pomodoro.hpp  pomodoro_screen.hpp  screen.hpp  weather.hpp
src/util/conversions/: base64.hpp  rfc2047.hpp  screen.hpp  string-double.hpp
src/views/: assertion.hpp  cached_view.hpp  json.hpp  try_button.hpp
